--- a/graph/board.html
+++ b/graph/board.html
@@ -15,7 +15,9 @@
 <div id="menu">
     <label for="mod1">place new node</label><input type="radio" name="mode" id="mod1" onclick="getmode()">
     <label for="mod2">connect two nodes</label><input type="radio" name="mode" id="mod2" onclick="getmode()">
-    <label for="mod3">remove node</label><input type="radio" name="mode" id="mod3" onclick="getmode()">
+    <label for="mod3">add node</label><input type="radio" name="mode" id="mod3" onclick="getmode()">
+    <label for="mod4">remove node</label><input type="radio" name="mo   de" id="mod4" onclick="getmode()">
+
     <br>
     <button onclick="clearMode();getmode()">Clear mode</button>
 </div>
