--- a/slach clock/board.html
+++ b/slach clock/board.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>Clock</title>
     <link rel="stylesheet" href="css.css">
+    <script src="numbers.js"></script>
     <script src="js.js"></script>
+
 </head>
 <body>
-    <canvas id="canvas" width="100" height="100" ></canvas>
+    <canvas id="canvas" width="100" height="140"></canvas>
 </body>
 </html>
